<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_verify_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/layout_main_header" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/white_circle_5"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        style="@style/text_333_16"
                        android:layout_centerVertical="true"
                        android:text="@string/pro_name" />

                    <TextView
                        style="@style/text_999_16"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="项目A" />
                </RelativeLayout>

                <View style="@style/view_A8A8A8_border" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        style="@style/text_333_16"
                        android:layout_centerVertical="true"
                        android:text="@string/pro_cate" />

                    <TextView
                        style="@style/text_999_16"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="项目A" />
                </RelativeLayout>

                <View style="@style/view_A8A8A8_border" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        style="@style/text_333_16"
                        android:layout_centerVertical="true"
                        android:text="@string/pro_link" />

                    <TextView
                        style="@style/text_999_16"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="项目A" />
                </RelativeLayout>

                <View style="@style/view_A8A8A8_border" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        style="@style/text_333_16"
                        android:layout_centerVertical="true"
                        android:text="@string/pro_node" />

                    <TextView
                        style="@style/text_999_16"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="项目A" />
                </RelativeLayout>

                <View style="@style/view_A8A8A8_border" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        style="@style/text_333_16"
                        android:layout_centerVertical="true"
                        android:text="@string/pro_unit" />

                    <TextView
                        style="@style/text_999_16"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="项目A" />
                </RelativeLayout>

                <View style="@style/view_A8A8A8_border" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <TextView
                        style="@style/text_333_16"
                        android:layout_centerVertical="true"
                        android:text="@string/pro_executor" />

                    <TextView
                        style="@style/text_999_16"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="项目A" />
                </RelativeLayout>

            </LinearLayout>

            <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
                android:id="@+id/videoplayer"
                android:layout_width="match_parent"
                android:layout_height="210dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:background="@drawable/white_circle_5"
                android:orientation="horizontal"
                android:padding="17dp">

                <TextView
                    style="@style/text_333_16"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:text="@string/pro_opinion" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:gravity="left|top"
                    android:hint="@string/app_name"
                    android:inputType="textMultiLine"
                    android:paddingLeft="6dp"
                    android:textColorHint="@color/color_cccccc"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="35dp"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="13dp"
                    android:layout_weight="1"
                    android:background="@drawable/blue_circle_5"
                    android:text="通过"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="13dp"
                    android:layout_weight="1"
                    android:background="@drawable/org_circle_5"
                    android:text="驳回"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
